@@ -22,6 +22,11 @@ LIBS_DIR:=$(UHEXEN2_TOP)/libs
 OSLIBS:=$(UHEXEN2_TOP)/oslibs
 
 CC ?= gcc
+ifeq ($(origin CC),default)
+# refuse the stupid 'cc' default of make
+# which not necessarily exist everywhere
+CC  = gcc
+endif
 AR ?= ar
 RANLIB ?= ranlib
 
